# riscv-scratchpad

./: .gitignore  README.md
baremetal-custom-inst-c/src/: CMakeLists.txt  main.c
baremetal-startup-c/: Makefile  README.md  run_sim.sh
baremetal-startup-c/src/: CMakeLists.txt  main.c  riscv-csr.h  riscv-interrupts.h  startup.c  timer.c  timer.h
baremetal-startup-c/test/: run_sim.cmd  vcd-trace.gtkw
baremetal-startup-cxx/: Makefile  README.md
baremetal-startup-cxx/src/: CMakeLists.txt  linker.lds  main.cpp  riscv-csr.hpp  riscv-interrupts.hpp  startup.cpp  timer.hpp
baremetal-startup-cxx/test/: run_sim.cmd  vcd-trace.gtkw
baremetal-vcd-trace/: README.md  run_sim.cmd  run_sim.sh  vcd-trace.gtkw
baremetal-vcd-trace/src/: CMakeLists.txt  main.c
baremetal-vector-int/: Makefile
baremetal-vector-int/src/: CMakeLists.txt  main.c  vector_table.c  vector_table.h
cmake/: Makefile  README.md  targets.mak
cmake/cmake/: riscv.cmake
cmake/include/: dummy.h
cmake/src/: CMakeLists.txt  dummy.c  startup.c  test.c
targets/: Makefile  example.c
